Index by URI.
IndexTool can now take a URI starting with a "protocol:" prefix. If there's no protocol prefix, its behaviour is unchanged (it defaults to the "file:" protocol).

This will enable indexing from various sources, i.e. a web service, database, etc. We intend to add plugin support to add a custom source (so you can e.g. index document from your internal web service).